# darknet

./: CMakeLists.txt  Makefile  README.md  package.xml
data/: obj.data  process.py  train.txt  yolov2-tiny.cfg  yolov2_custom_train.cfg  yolov3-tiny.cfg  yolov3_custom_train (copy).cfg  yolov4-tiny.cfg
