<?xml version="1.0"?>
<package format="2">
  <name>darknet</name>
  <version>1.1.4</version>
  <description>Darknet is an open source neural network framework.</description>
  <maintainer email="mathiebhan@roperobotics.com">Mathiebhan Mahendran</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/Mathiebhan/darknet</url>
  <author email="mathiebhan@roperobotics.com">Mathiebhan Mahendran</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>boost</depend>
  <depend>libopencv-dev</depend>
  <depend>libx11</depend>
  <depend>libxt-dev</depend>
  <depend>libxext</depend>

  <!-- <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <!-- <depend>darknet_ros_msgs</depend>
  <depend>actionlib</depend> --> -->

  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>wget</test_depend>
</package>
